Changed the UI issues with the bowling order screen